--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,1 +1,1 @@
-input{width:200px}
+p{font-size:16px}@media (min-width:768px) and (max-width:1023px){p{font-size:18px}}@media (min-width:1024px){p{font-size:20px}}input{width:200px}article{width:55%;border:1px solid gray;padding:20px}aside{width:40%;float:right}
