--- a/public/templates/my-user-functions.html
+++ b/public/templates/my-user-functions.html
@@ -226,11 +226,11 @@
 						type="submit" 
 						value="Register Now!">
 
-						<span class='alertwarn'  
+				<!-- 		<span class='alertwarn'  
 							data-ng-show ="User.password === User.username &&
 							User.password.length > 5">
 							User name and password cannot be identical.
-  						</span>
+  						</span> -->
 
 					</form>
 				</div>
