--- a/public/templates/my-user-functions.html
+++ b/public/templates/my-user-functions.html
@@ -1,4 +1,4 @@
-<div data-ng-controller= "userController as User">    
+<!-- <div data-ng-controller= "userController as User">  -->   
 	<nav class = 'navbar navbar-default'>
 		<div id = "titleGraphic">Daybreak</div>
  	  	<div class="container" >
@@ -331,4 +331,5 @@
 			</div>
 		</div>
 	</div>	 
-</div>  
+<!-- </div>  
+ -->
