--- a/public/templates/single-day-view.html
+++ b/public/templates/single-day-view.html
@@ -5,15 +5,18 @@
 	 	 
 		
 		<h3>Here's the Day You Selected</h3>
- 	 	Day.dayChoice is: {{Day.dayChoice}}
+ 	 	
+ 	 	Day.chosenDay.dayName is: {{Day.chosenDay.dayName}}
+ 	 	Day.chosenDay.dayName is: {{Day.chosenDay._id}}
+
 			<div class="bestDaysFrame">
- 				 	<div class='title'>Title:			{{ 	day.dayName[0] }}</div>
-				 	<div class='tags'>Tags:			{{	day.dayTags[3]}}</div>
-					<div class='description'>Description: 	{{	day.dayDesc}}</div>
-					<div class='whowasthere'>Who was there? {{	day.dayGroup}}</div>
-					<div class='daydate'>When? 	{{ 	day.dayDate}}</div>
-					<div class='user'>By: 	{{ 	day.userName }}</div>
-					<div class='user'>ID?: 	{{ 	day._id }}</div>
+ 				 	<div class='title'>Title:{{ 	Day.chosenDay.dayName }}</div>
+				 	<div class='tags'>Tags:	{{	Day.chosenDay.dayTags}}</div>
+					<div class='description'>Description: 	{{	Day.chosenDay.dayDesc}}</div>
+					<div class='whowasthere'>Who was there? {{	Day.chosenDay.dayGroup}}</div>
+					<div class='daydate'>When? 	{{ 	Day.chosenDay.dayDate}}</div>
+					<div class='user'>By: 	{{ 	Day.chosenDay.userName }}</div>
+					<div class='user'>ID?: 	{{ 	Day.chosenDay._id }}</div>
  
 
 					<div class ='photo'> photo here</div> 
