single day display large

--- a/public/templates/single-day-view.html
+++ b/public/templates/single-day-view.html
@@ -5,21 +5,19 @@
 	 	 
 		
 		<h3>Here's the Day You Selected</h3>
- 	 	
- 	 	Day.chosenDay.dayName is: {{Day.chosenDay.dayName}}
- 	 	Day.chosenDay.dayName is: {{Day.chosenDay._id}}
+ 	 	 
 
-			<div class="bestDaysFrame">
- 				 	<div class='title'>Title:{{ 	Day.chosenDay.dayName }}</div>
-				 	<div class='tags'>Tags:	{{	Day.chosenDay.dayTags}}</div>
-					<div class='description'>Description: 	{{	Day.chosenDay.dayDesc}}</div>
-					<div class='whowasthere'>Who was there? {{	Day.chosenDay.dayGroup}}</div>
-					<div class='daydate'>When? 	{{ 	Day.chosenDay.dayDate}}</div>
-					<div class='user'>By: 	{{ 	Day.chosenDay.userName }}</div>
-					<div class='user'>ID?: 	{{ 	Day.chosenDay._id }}</div>
+			<div class="singleDayFrame">
+ 				 	<div class='title1'>Title:{{ 	Day.chosenDay.dayName }}</div>
+				 	<div class='tags1'>Tags:	{{	Day.chosenDay.dayTags}}</div>
+					<div class='description1'>Description: 	{{	Day.chosenDay.dayDesc}}</div>
+					<div class='whowasthere1'>Who was there? {{	Day.chosenDay.dayGroup}}</div>
+					<div class='daydate1'>When? 	{{ 	Day.chosenDay.dayDate}}</div>
+					<div class='user1'>By: 	{{ 	Day.chosenDay.userName }}</div>
+					<div class='user1'>ID?: 	{{ 	Day.chosenDay._id }}</div>
  
 
-					<div class ='photo'> photo here</div> 
+					<div class ='photo1'> photo here</div> 
 
  			</div>
 
