single versus grid view

--- a/public/templates/single-day-view.html
+++ b/public/templates/single-day-view.html
@@ -1,25 +1,19 @@
-<div> Single Day View </div>
-<p> SHOULD SWAP WITH MULTI-DAY VIEW ARRAY</p>
+	<div >
 
-	<div class = 'daydisplay'>
-	 	 
-		
+		 <input 	type="button" 
+					value='Back to Grid View'   
+					class = 'xexploreOneDayButton' 
+					data-ng-click = "User.userDayView='grid' " >
+	 	 		
 		<h3>Here's the Day You Selected</h3>
- 	 	 
-
-			<div class="singleDayFrame">
- 				 	<div class='title1'>Title:{{ 	Day.chosenDay.dayName }}</div>
-				 	<div class='tags1'>Tags:	{{	Day.chosenDay.dayTags}}</div>
-					<div class='description1'>Description: 	{{	Day.chosenDay.dayDesc}}</div>
-					<div class='whowasthere1'>Who was there? {{	Day.chosenDay.dayGroup}}</div>
-					<div class='daydate1'>When? 	{{ 	Day.chosenDay.dayDate}}</div>
-					<div class='user1'>By: 	{{ 	Day.chosenDay.userName }}</div>
-					<div class='user1'>ID?: 	{{ 	Day.chosenDay._id }}</div>
- 
-
-					<div class ='photo1'> photo here</div> 
-
- 			</div>
-
-		 
+ 			<div class="singleDayFrame">
+			<div class='title1'>Title:{{ 	Day.chosenDay.dayName }}</div>
+			<div class='tags1'>Tags:	{{	Day.chosenDay.dayTags}}</div>
+			<div class='description1'>Description: 	{{	Day.chosenDay.dayDesc}}</div>
+			<div class='whowasthere1'>Who was there? {{	Day.chosenDay.dayGroup}}</div>
+			<div class='daydate1'>When? 	{{ 	Day.chosenDay.dayDate}}</div>
+			<div class='user1'>By: 	{{ 	Day.chosenDay.userName }}</div>
+			<div class='user1'>ID?: 	{{ 	Day.chosenDay._id }}</div>
+			<div class ='photo1'> photo here</div> 
+		</div>
 	</div>
