username var change

--- a/public/templates/grid-day-view.html
+++ b/public/templates/grid-day-view.html
@@ -9,10 +9,9 @@
 						 	<div class='tags'>			{{	day.dayTags}}</div>
 							<div class='description'> Description:&nbsp;{{	day.dayDesc}}</div>
 							<div class='whowasthere'> Who was there?&nbsp; {{	day.dayGroup}}</div>
-							<div class='daydate'>		When?&nbsp;{{ 	day.dayDate}}</div>
-							<div class='user'>			By:&nbsp;{{ 	day.username }}</div>
-							<div class='user'>			ID?:&nbsp;{{ 	day._id }}</div>
-							
+							<div class='daydate'>When?&nbsp;{{ 	day.dayDate}}</div>
+							<div class='user'>By:&nbsp;{{day.userName }}</div>
+ 							
  		 
 							<input 	type="button" 
 									value='Explore This Day'   
