search for multiple tags, new styling, new search clear

--- a/public/templates/grid-day-view.html
+++ b/public/templates/grid-day-view.html
@@ -1,25 +1,19 @@
-		  
 
-				<h3>Great Days Shared by Our Community</h3>
-				<h5>Here are some great Days!</h5>
+<h5>Great Days Shared by Our Community</h5>
 
-					<div class="bestDaysFrame">
-					 	<div data-ng-repeat="day in days" class='singleDayDisplay showbox'> 
-						 	<div class='title'> {{ 	day.dayName }}</div>
-						 	<div class='tags'>			{{	day.dayTags}}</div>
-							<div class='description'> Description:&nbsp;{{	day.dayDesc}}</div>
-							<div class='whowasthere'> Who was there?&nbsp; {{	day.dayGroup}}</div>
-							<div class='daydate'>When?&nbsp;{{ 	day.dayDate}}</div>
-							<div class='user'>By:&nbsp;{{day.userName }}</div>
- 							
- 		 
-							<input 	type="button" 
-									value='Explore This Day'   
-									class = 'exploreOneDayButton' 
-									data-ng-click = "Day.showOneDay(day._id)" >
+<div class="bestDaysFrame">
+ 	<div data-ng-repeat="day in days" class='singleDayDisplay showbox'> 
 
-							<div class ='photo'> photo here</div> 
-						</div>
-					</div>
-				</div>      <!-- close container -->
-			</div>      <!-- close grid view -->
+ 		<div data-ng-click = "Day.showOneDay(day._id)" style ='cursor: pointer;' >
+		 	<div class='title'> 	{{ 	day.dayName }}</div>
+		 	<div class='tags'>		{{	day.dayTags}}</div>
+			<div class='description'> Description:&nbsp;{{	day.dayDesc}}</div>
+			<div class='whowasthere'> Who was there?&nbsp; {{	day.dayGroup}}</div>
+			<div class='daydate'>When?&nbsp;{{ 	day.dayDate}}</div>
+			<div class='user'>By:&nbsp;{{day.userName }}</div>
+			<div class ='photo'> photo here</div> 
+			<div>						
+				
+	</div>
+</div>
+ 
