--- a/public/templates/my-user-functions.html
+++ b/public/templates/my-user-functions.html
@@ -1,9 +1,12 @@
 <!-- <div data-ng-controller= "userController as User">  -->   
-	<nav class = 'navbar navbar-default'>
+
+<div class="navbar-fixed">
+
+	<nav>
 		<div id = "titleGraphic">Daybreak</div>
  	  	<div class="container" >
  	  		
-			<ul class='nav navbar-nav navfont'>
+			<ul class='right hide-on-small-and-down button-collapse'>
 
 				<li><a><div 
 						data-ng-click="User.userViewSwitch = null ">
@@ -19,7 +22,8 @@
 
 				<li><a><div 	
 			   	  		data-ng-model="User"  
-			  	  		data-ng-show="User.userState==='loggedIn'" >
+			  	  		data-ng-show="User.userState==='loggedIn'" 
+			  	  		data-ng-click="User.userViewSwitch = null ">
 			  			Welcome:  {{User.username}} 
 				  		</div>
 				 </a></li>
@@ -79,6 +83,7 @@
 					</div>
 
 					<form data-ng-submit="User.login()">
+
 
 						<div class="form group">
 							<label class="label-space">User Name</label>
@@ -283,61 +288,69 @@
 	   		<div id='about' ng-switch on="User.userViewSwitch">
 				<div ng-switch-when='Myaccount' >
 		 	 		<div class='loginDirection'>About Your Account</div>
-			 	 		<div class ="userProfile">
-							<div data-ng-show="User.userState==='loggedIn' ">
 
-					  			<div class="userProfile"  >
-						  			<li>Name:&nbsp;{{User.username}}</li>
-						  			<li>Member since:&nbsp;{{User.created}}</li>
-						  			<li>Display Name :&nbsp;{{User.username}}&nbsp; &nbsp; &nbsp; &nbsp; <span class='link'>Change Display Name?</span></li>
-						  			<li>Email (private):&nbsp;{{User.email}}. &nbsp; &nbsp; &nbsp; &nbsp; <span class='link'>Change E-mail?</span></li>
+ 					<!-- <i data-ng-click="User.userViewSwitch=null  "  
+							class="material-icons right" 
+							style ='cursor: pointer;'>done
+					</i> -->
 
-						  			<li>About You (public):&nbsp;{{User.userAbout}}</li>
-					  			</div>
+					<i data-ng-click = "User.userViewSwitch=null "  
+						class="material-icons right small" 
+						style ='cursor: pointer;'>clear
+					</i>
+
+		 	 		<div class ="userProfile">
+						<div data-ng-show="User.userState==='loggedIn' ">
+
+				  			<div class="userProfile"  >
+					  			<li>Name:&nbsp;{{User.username}}</li>
+					  			<li>Member since:&nbsp;{{User.created}}</li>
+					  			<li>Display Name :&nbsp;{{User.username}}&nbsp; &nbsp; &nbsp; &nbsp; <span class='link'>Change Display Name?</span></li>
+					  			<li>Email (private):&nbsp;{{User.email}}. &nbsp; &nbsp; &nbsp; &nbsp; <span class='link'>Change E-mail?</span></li>
+
+					  			<li>About You (public):&nbsp;{{User.userAbout}}</li>
+				  			</div>
 
 
-					  			<div class="form group">
-					  				<form 
-										data-ng-submit="User.updateUserAbout(User)"
- 										name = "aboutForm" 
-										novalidate>
+				  			<div class="form group">
+				  				<form 
+									data-ng-submit="User.updateUserAbout(User)"
+										name = "aboutForm" 
+									novalidate>
 
-									<label class="labelspace">Tell other community members about yourself and about your perfect day.</label>
- 	
-									<input class= "form-control"
-									id='aboutfield' 
-									name='aboutForm'
-									type="text" 
-									value= "Enter"
-									data-ng-model="User.userAbout"
-									placeholder="My perfect day would be..."
-									required></input>
-					
-									<input  
-									class="btn btn-success btn-sm btn-block" 
- 									type="submit" 
-									value="Enter">
-									</input>
-								</div>	
-  		
-	  						</div>
-						</div>
-			  		</div>  
-  				<div class='closeModal' 
-					data-ng-show="User.userViewSwitch==='Myaccount' ">
- 					<a data-ng-click="User.userViewSwitch=null ">
-						Close this pop-up.
-					</a>
-				</div>
+								<label class="labelspace">Tell other community members about yourself and about your perfect day.</label>
+	
+								<input class= "form-control"
+								id='aboutfield' 
+								name='aboutForm'
+								type="text" 
+								value= "Enter"
+								data-ng-model="User.userAbout"
+								placeholder="My perfect day would be..."
+								required></input>
+				
+								<input  
+								class="btn btn-success btn-sm btn-block" 
+									type="submit" 
+								value="Save">
+								</input>
+							</div>
+							
+							<br>
 
-				<div class='closeModal' 
-					data-ng-show="User.userViewSwitch==='Myaccount' ">
- 					<a data-ng-click="User.userViewSwitch='deleteaccount' ">
-	 					Delete this account?					
-					</a>
-				</div>
+							<div class='closeModal' 
+								data-ng-show="User.userViewSwitch==='Myaccount' ">
+									<a data-ng-click="User.userViewSwitch='deleteaccount' ">
+ 								Delete this account?					
+								</a>
+							</div>	
+		
+  						</div>
+					</div>
+		  		</div>  
+
+				
 			</div>
 		</div>
 	</div>	 
-<!-- </div>  
- -->
+</div>  
