--- a/public/templates/grid-day-view.html
+++ b/public/templates/grid-day-view.html
@@ -1,10 +1,14 @@
 
+<div ng-show="Days.day.length>0">
 <h5>Great Days Shared by Our Community</h5>
+</div>
+
+<div ng-show="Days.length=0"> nothing 
+</div>
 
 <div class="bestDaysFrame">
  	<div data-ng-repeat="day in days" class='singleDayDisplay showbox'> 
-
- 		<div data-ng-click = "Day.showOneDay(day._id)" style ='cursor: pointer;' >
+  		<div data-ng-click = "Day.showOneDay(day._id)" style ='cursor: pointer;' >
 		 	<div class='title'> 	{{ 	day.dayName }}</div>
 		 	<div class='tags'>		{{	day.dayTags}}</div>
 			<div class='description'> Description:&nbsp;{{	day.dayDesc}}</div>
@@ -12,8 +16,8 @@
 			<div class='daydate'>When?&nbsp;{{ 	day.dayDate}}</div>
 			<div class='user'>By:&nbsp;{{day.userName }}</div>
 			<div class ='photo'> photo here</div> 
-			<div>						
-				
+			
+ 		</div>	
 	</div>
 </div>
  
