ngrepeat for all locations in single day display

--- a/public/templates/single-day-view.html
+++ b/public/templates/single-day-view.html
@@ -1,17 +1,27 @@
 <div > 		
-	<h3>{{ 	Day.chosenDay.dayName }}</h3>
-	<div>by&nbsp;{{ Day.chosenDay.userName }}</div>
+	<br>
+	<div class ='singleDayTitle'>{{Day.chosenDay.dayName }} by &nbsp;{{ Day.chosenDay.userName }}
+	</div>
 		 
 	<span style="float: right">Close&nbsp;</span>
 	<i data-ng-click = "User.userDayView='grid' "  
-		class="material-icons right" style ='cursor: pointer;'>clear</i>
+		class="material-icons right" style ='cursor: pointer;'>clear
+	</i>
 		
-		<div class="singleDayFrame">
+	<div class="singleDayFrame">
+		<div class='description1'>This was a great day for us because... 	{{	Day.chosenDay.dayDesc}}</div>
+		<div class='location1'>Where we went. 
+
+			<div data-ng-repeat="x in Day.chosenDay.locations"> 
+				<div class='tags1'> {{x.location}}
+				</div>
+			</div>
+
+		</div>
+
 		<div class='tags1'>Tags:	{{	Day.chosenDay.dayTags}}</div>
-		<div class='description1'>Description: 	{{	Day.chosenDay.dayDesc}}</div>
-		<div class='whowasthere1'>Who was there? {{	Day.chosenDay.dayGroup}}</div>
+			<div class='whowasthere1'>Who was there? {{	Day.chosenDay.dayGroup}}</div>
 		<div class='daydate1'>When? 	{{ 	Day.chosenDay.dayDate}}</div>
-		<div class='user1'>By: 	{{ 	Day.chosenDay.userName }}</div>
-		<div class ='photo1'> photo here</div> 
+ 		<div class ='photo1'> photo here</div> 
 	</div>
 </div>
