--- a/public/templates/my-user-functions.html
+++ b/public/templates/my-user-functions.html
@@ -298,45 +298,41 @@
 		 	 		<div class ="userProfile">
 						<div data-ng-show="User.userState==='loggedIn' ">
 
-				  			<div class="userProfile"  >
+							<form  	data-ng-submit="User.updateUserInfo()"
+									name = "aboutForm" 
+									novalidate >
 
-					  			<li>Name:&nbsp;{{User.username}}</li>
+					  			<div class="userProfile" >
 
-					  			<li>Member since:&nbsp;{{User.created}}</li>
+						  			<div class='profileLabel'>Name: {{User.username}}</div>
 
-					  			<li>Display Name :&nbsp;{{User.username}}&nbsp; &nbsp; 
-					  				<span class='link'>Change Display Name?</span></li>
+						  			<div class='profileLabel'>Member since: {{User.created}}</div>
 
-					  			<li>Email (private):&nbsp;{{User.email}}.  &nbsp; &nbsp;
-					  				 <span class='link'>Change E-mail?</span></li>
+						  			<div class='profileLabel'>Email (private): {{User.email}}. </div>
 
-					  			<li>About You (public):&nbsp;{{User.userAbout}}</li>
+						  				 <span class='link'>Change E-mail?</span>
+						  			 
+						  			<div class='profileLabel'>About You (public):;{{User.userAbout}}</div>
+						  			
+ 
+					  			</div>
 
-				  			</div>
+					  			<div class="form group">
+					  				
+	 
+									<input class= "form-control"
+	 								type="text" 
+	 								data-ng-model="User.userAbout"
+									placeholder="My perfect day would be..."
+									required>
+					
+	 							</div>
 
-				  			<div class="form group">
-				  				<form 
-									data-ng-submit="User.updateUserInfo()"
-										name = "aboutForm" 
-									novalidate>
-
-								<label class="labelspace">Tell other community members about yourself and your ideal day.</label>
-	
-								<input class= "form-control"
-								id='aboutfield' 
-								name='aboutForm'
-								type="text" 
- 								data-ng-model="User.userAbout"
-								placeholder="My perfect day would be..."
-								required></input>
-				
 								<input  
-								class="btn btn-success btn-sm btn-block" 
+									class="btn btn-success btn-sm btn-block" 
 									type="submit" 
-								value="Save">
-								</input>
-							</div>
-							
+									value="Save">
+								
 							<br>
 
 							<div class='closeModal' 
