style changes on About Your Account

--- a/public/templates/my-user-functions.html
+++ b/public/templates/my-user-functions.html
@@ -304,15 +304,15 @@
 
 					  			<div class="userProfile" >
 
-						  			<div class='profileLabel'>Name: {{User.username}}</div>
+						  			<div class='profileLabel'>Name:&nbsp; {{User.username}}</div>
 
-						  			<div class='profileLabel'>Member since: {{User.created}}</div>
+						  			<div class='profileLabel'>Member since:&nbsp; {{User.created}}</div>
 
-						  			<div class='profileLabel'>Email (private): {{User.email}}. </div>
+						  			<div class='profileLabel'>Email (private):&nbsp; {{User.email}}.</div>
+						  			
+						  			<span class='link'>Change E-mail?</span> 
 
-						  				 <span class='link'>Change E-mail?</span>
-						  			 
-						  			<div class='profileLabel'>About You (public):;{{User.userAbout}}</div>
+						  			<div class='profileLabel'>About You (public):&nbsp;{{User.userAbout}}</div>
 						  			
  
 					  			</div>
