--- a/public/templates/my-user-functions.html
+++ b/public/templates/my-user-functions.html
@@ -15,7 +15,7 @@
 				</a></li>
 
 
-			  	 <li><a	data-ng-show="User.userState==='loggedOut'"
+			  	<li><a	data-ng-show="User.userState==='loggedOut'"
 			  	  		data-ng-click="User.userViewSwitch ='NEWREG'"> 
 			  	  		Register 
 			  	</a></li>
@@ -50,14 +50,13 @@
 				  		<div class='joinMessage'> Share Your Favorite Day!  </div>
 				</a></li>	
 
-				 
-
-
 		   	</ul>
 	  	</div>
 	</nav>
 
+
 	<div class = 'surround'>	
+
 		<div class = 'userContainer'
 			data-ng-show= "User.userViewSwitch === 'Log' " >
 			<div id='login' ng-switch on="User.userViewSwitch">
@@ -115,9 +114,7 @@
 			</div>
 
 			
-		<div id='NEWREGISTER'
-		   			data-ng-switch on='User.userViewSwitch'
- 		   			>
+		<div id='NEWREGISTER' data-ng-switch on='User.userViewSwitch'>
 		   		<div data-ng-switch-when="NEWREG">
 					<form 
 						data-ng-submit="User.registerValidUser(User)"
@@ -151,8 +148,7 @@
 							type="text"
  							data-ng-model="User.username"
   							data-ng-change="User.checkthename(User.username)" 
-
- 							placeholder="Six character minimum. Public."
+							placeholder="Six character minimum. Public."
  							required>				
 						</div>   
   
@@ -163,7 +159,6 @@
 							<span class="alertinform" 
 							ng-show="regForm.email.$error.email">
     						Please enter a valid email.</span>
-
 
 							<span class="alertsuccess" 
 							ng-show="!regForm.email.$error.email && 
@@ -228,10 +223,8 @@
 							id='passwordConfirm' 
 							name='passwordConfirm'
 							type="password" 
-							data-ng-model="User.passwordConfirm"
- 							
+							data-ng-model="User.passwordConfirm"	
  							data-ng-keyup="User.passconfirm(User.password, User.passwordConfirm)"
-
 							placeholder="Reenter password."
 							required>
 						</div>	
@@ -245,18 +238,13 @@
 						User.email.length === error" 
 						class="btn btn-success btn-sm btn-block" 
 						type="submit" 
-						value="Register Now!">
-
-				<!-- 		<span class='alertwarn'  
-							data-ng-show ="User.password === User.username &&
-							User.password.length > 5">
-							User name and password cannot be identical.
-  						</span> -->
+						value="Register Now!"> 
 
 					</form>
 				</div>
 		 	</div>
 		 
+
 			<div id='resetPassword' 
 				data-ng-switch on='User.userViewSwitch'
 				data-ng-submit="User.resetPassword()"
@@ -298,7 +286,6 @@
 		 	 		<div class ="userProfile">
 						<div data-ng-show="User.userState==='loggedIn' ">
 
-
 							<div class='publicPrivateLabel'>Public</div>
 
 							<div class="profilePublic">
@@ -307,15 +294,15 @@
 										name = "aboutForm" 
 										novalidate >
 
-						  			<div class="userProfile" >
+									<div class="userProfile" >
 
-							  			<div class='profileLabel'>Name:
+							  			<div class='profileLabel' >Name:
 							  				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							  				<span class='profileInfo'>{{User.username}}</span>
+							  				<span class='profileInfo' id='pname'>{{User.username}}</span>
 							  			</div>
 
-							  			<div class='profileLabel'>Member since:&nbsp; 
-							  				<span class='profileInfo'>{{User.created}}</span>
+							  			<div class='profileLabel' >Member since:&nbsp; 
+							  				<span class='profileInfo' id='pdate'>{{User.created}}</span>
 							  			</div>
  
 										<div class="profileLabel">About Me:
@@ -331,8 +318,6 @@
 										</div>			
 										
 						  			</div>
-
-						  			
 
 									<input  
 										class="btn btn-success btn-sm btn-block" 
@@ -357,9 +342,6 @@
 							  				<span class='profileInfo'>  ******** &nbsp;</span>
 							  				<span class='link'>Change?</span>  
 							  			</div>
-
-							  			
-
 							  	</div>  
 								
 							<br>
