--- a/public/templates/my-user-functions.html
+++ b/public/templates/my-user-functions.html
@@ -473,9 +473,9 @@
 							  				<span class='profileInfo' id='pdate'>{{User.created}}</span>
 							  			</div>
  
-										<div class="profileLabel">About Me:
+										<div class="profileLabel">About Me:	
 										 	 
-											<textarea style="background-color: #1de9b6;"
+											<textarea class='textarea' 
 											rows='6' maxlength='150' 
 											
 			 								data-ng-model="User.userAbout"
@@ -483,8 +483,8 @@
 											required>
 
 											</textarea>
-											 
-										</div>			
+										</div>
+												
 										
 						  			</div>
 
