--- a/public/views/passwordresetform2.html
+++ b/public/views/passwordresetform2.html
@@ -2,9 +2,9 @@
 <h3>Perfect Daybreak - Password Reset</h3>
 <h3>Once you reset your password, you will be returned to DayBreak, where you can log in with your new information</h3>
 <form action="" method="post">
-  <label for="password">Password: </label>
-  <input name="password" placeholder="Enter new password">
-  <label for="password-verify">Verify Password: </label>
-  <input name="password-verify" placeholder="Enter password again">
+  <label for="passwordreset">Password: </label>
+  <input name="passwordreset" placeholder="Enter new password">
+  <label for="passwordresetverify">Verify Password: </label>
+  <input name="passwordresetverify" placeholder="Enter password again">
   <input type="submit" value="Submit">
 </form>
