--- a/public/templates/my-user-functions.html
+++ b/public/templates/my-user-functions.html
@@ -9,7 +9,7 @@
 			<ul class='right hide-on-small-and-down button-collapse'>
 
 				<li><a><div 
-						data-ng-click="User.userViewSwitch = null ">
+						data-ng-click="User.userViewSwitch = null;User.userDayView = 'grid';">
 						Home  
 						</div>
 				</a></li>
