--- a/public/templates/single-day-view.html
+++ b/public/templates/single-day-view.html
@@ -1,14 +1,11 @@
-<div> 		
-	<br>
-	<div class ='singleDayTitle'>
-		<span data-make-editable class="editable">{{Day.chosenDay.dayName }}</span>
-	&nbsp;by&nbsp;{{ Day.chosenDay.userName }}
+<div class="singleDayView"> 		
+	<div class="singleDayTitle">
+		<span data-make-editable class="editable">{{Day.chosenDay.dayName}}</span>
+		<span>&nbsp;by&nbsp;{{ Day.chosenDay.userName }}</span>
+		
 	</div>
 		 
-	<span style="float: right">Close&nbsp;</span>
-	<i data-ng-click ="User.userDayView='grid' "  
-		class="material-icons right" style ='cursor: pointer;'>clear
-	</i>
+
 		
 	<div class="singleDayFrame">
 		<div class='description1'>This was a great day for us because...&nbsp;
@@ -16,8 +13,10 @@
 		</div>
 		<div class='location1'>Where we went. 
 
-			<div data-ng-repeat="x in Day.chosenDay.locations">
-				<div class='tags1'>{{x.location}} - {{x.desc}}
+			<div data-ng-repeat="x in Day.chosenDay.locations track by $index">
+				<div class='tags1'>{{x.location}} - {{x.desc}}</div>
+					<div data-ng-repeat="photo in x.photosLg track by $index" style="display:inline-block;margin:0 5px;">
+					<img src="{{photo.url}}"></img>
 				</div>
 			</div>
 
@@ -26,6 +25,15 @@
 		<div class='tags1'>Tags: <span data-make-editable class="editable">{{Day.chosenDay.dayTags}}</span></div>
 			<div class='whowasthere1'>Who was there? {{	Day.chosenDay.dayGroup}}</div>
 		<div class='daydate1'>When? {{ 	Day.chosenDay.dayDate}}</div>
- 		<div class ='photo1'> photo here</div> 
+
+	
+
+	<button class="btn waves-effect waves-light right" type="submit" name="action">Save changes
+    		<i class="material-icons right">send</i>
+  		</button>
+
+		<button class="btn waves-effect waves-light right" type="submit" name="action">Close without saving
+    		<i class="material-icons right">send</i>
+  		</button>
 	</div>
 </div>
