--- a/public/templates/my-user-functions.html
+++ b/public/templates/my-user-functions.html
@@ -57,7 +57,7 @@
 
 	<div class = 'surround'>	
 
-
+		<div class='usermessage'> {{User.userMessage}} </div>
 		
 		<div class = 'userContainer' 
 		data-ng-show= "User.userViewSwitch !== null " >
