adding header changes

--- a/public/views/locationList.html
+++ b/public/views/locationList.html
@@ -1,1 +1,2 @@
-<div ng-repeat="location in dayLocations"><div style="font-weight:bold;margin:5px 0 0 0;">{{location.location}}</div>{{location.desc}}</div>
+<div ng-repeat="location in dayLocations">
+<div style="font-weight:bold;margin:5px 0 0 0;">{{location.location}}</div>{{location.desc}}</div>
